CS_SBOX_20150209_01/Metadata/unpackaged/objects/fw1__Payment_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Passed_to_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 11/26/2013 for Dave D</description>
        <label>Passed to GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>fw1__Payment__c</referenceTo>
        <relationshipLabel>Payment Activities</relationshipLabel>
        <relationshipName>Payment_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fw1__Refund_Type__c</fullName>
        <label>Refund Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Remaining_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fw1__Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Payment Activity</label>
    <nameField>
        <label>Payment Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>